deploy/acm-app/omc-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-mini-console
    app.kubernetes.io/component: openshift-mini-console
    app.kubernetes.io/instance: openshift-mini-console
  name: openshift-mini-console
  namespace: omc-app
spec:
  host: omc-round-robin.aws.uc2.io
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 5000-tcp
  to:
    kind: Service
    name: openshift-mini-console
    weight: 100
